--- a/v1.1-config.json
+++ b/v1.1-config.json
@@ -17,5 +17,6 @@
     "servo_pin": 14,
     "button_pin": 24,
     "flag_down_angle": 180,
-    "flag_up_angle": 0
+    "flag_up_angle": 0,
+    "rise_delay": 65
 }
