Feature: network loss recovery by rebooting modem with huawei api

--- a/v1-config.json
+++ b/v1-config.json
@@ -6,7 +6,13 @@
     "image_url": "/message/image",
     "refill_url": "/printer/refill",
     "flag_state_url": "/special/flag",
+    "modem_restart_url": "/printer/modem-restart",
+    "modem_gateway_url": "http://192.168.8.1",
     "check_interval": 30,
+    "request_timeout_interval": 30,
+    "modem_restart_trigger_interval": 3600,
+    "modem_restart_notify_timeout_interval": 300,
+    "modem_boot_time": 60,
     "image_path": "images/",
     "paper_capacity": 18,
     "ink_capacity": 54,
