--- a/v1.1-config.json
+++ b/v1.1-config.json
@@ -21,6 +21,11 @@
         "green": 15,
         "blue": 18
     },
+    "paper_led_pins": {
+        "red": 13,
+        "green": 19,
+        "blue": 26
+    },
     "servo_pin": 14,
     "button_pin": 24,
     "flag_down_angle": 180,
