--- a/v1-config.json
+++ b/v1-config.json
@@ -21,6 +21,12 @@
         "green": 27,
         "blue": 17
     },
+    "paper_led_pins": {
+        "red": 13,
+        "green": 19,
+        "blue": 26
+    },
+    "paper_led": false,
     "servo_pin": 14,
     "button_pin": 4,
     "flag_down_angle": 10,
