Feature: added remote admin commands

--- a/v1-config.json
+++ b/v1-config.json
@@ -3,12 +3,15 @@
     "url": "https://senior-gimenio.eu/api",
     "request_url": "/message/request",
     "ack_url": "/message/ack",
+    "command_url": "/command",
+    "command_ack_url": "/command/ack",
     "image_url": "/message/image",
     "refill_url": "/printer/refill",
     "flag_state_url": "/special/flag",
     "modem_restart_url": "/printer/modem-restart",
     "modem_gateway_url": "http://192.168.8.1",
     "check_interval": 30,
+    "command_check_interval": 10,
     "request_timeout_interval": 30,
     "modem_restart_trigger_interval": 3600,
     "modem_restart_notify_timeout_interval": 300,
