Feature: implemented printing via CUPS module

--- a/v1-config.json
+++ b/v1-config.json
@@ -12,9 +12,11 @@
     "modem_restart_url": "/printer/modem-restart",
     "modem_gateway_url": "http://192.168.8.1",
     "print_command": "/snap/bin/cups.lp",
+    "printer_name": "Canon_SELPHY_CP1500",
     "check_interval": 30,
     "command_check_interval": 10,
     "request_timeout_interval": 30,
+    "reboot_modem": false,
     "modem_restart_trigger_interval": 3600,
     "modem_restart_notify_timeout_interval": 300,
     "modem_boot_time": 60,
