--- a/v1.1-config.json
+++ b/v1.1-config.json
@@ -13,6 +13,7 @@
     "modem_gateway_url": "http://192.168.8.1",
     "print_command": "/snap/bin/cups.lp",
     "printer_name": "Canon_SELPHY_CP1500",
+    "initial_delay": 10,
     "cups_retries": 30,
     "check_interval": 30,
     "command_check_interval": 10,
